fix(04): WR-02 replace Collectors.toList() with .toList() in ExcecaoHandler
Uses Java 16+ Stream.toList() which returns an unmodifiable list, consistent
with the Java 21 style used throughout the rest of the codebase. Removes the
unused java.util.stream.Collectors import.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>